[package]
name = "sharded_cachemap"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
crossbeam-utils = "^0.8.21"
tokio = {version = "^1.45.1", features = ["sync"] }

[dev-dependencies]
criterion = {version = "^0.6.0", features =["async_tokio"] }
tokio = {version = "^1.45.1", features = ["sync", "macros", "rt-multi-thread"] }
crossbeam-utils = "^0.8.21"
rand = "0.9.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[[bench]]
name = "cache_bench"
harness = false
